chore: minor style fixes for theme alignment

--- a/assets/scss/common/variables.scss
+++ b/assets/scss/common/variables.scss
@@ -4,6 +4,10 @@ $content-side-percentage: 100% - $content-main-percentage;
 
 $space: 30px;
 
+$line-height: 1.6em;
+
+$margin-text: 14px;
+
 $text-color: #222222;
 
 $header-font-size: 18px;
